objects/OE_Order_Line_Item__c.object
<CustomObject>
    <description>BW - June 2016 for Open Enrollment engagement</description>
    <fields>
        <fullName>Item_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Item Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Item Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>OE_Order__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity_Ordered__c</fullName>
        <label>Quantity Ordered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_Legacy_OLIID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDC Legacy OLIID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Order Line Item</label>
    <nameField>
        <displayFormat>Order Line Item-{0000}</displayFormat>
        <label>Order Line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>